# accommodation-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  accommodation.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  accommodation.rockspec  accommodation_sdk.lua  accommodation_types.lua  config.lua  features.lua
php/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  accommodation_sdk.php  composer.json  config.php  features.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  accommodation_sdk.py  accommodation_types.py  config.py  features.py  pyproject.toml
py/core/: context.py  control.py  operation.py  response.py
py/entity/: accommodation_entity.py
py/feature/: audit_feature.py  base_feature.py  debug_feature.py  proxy_feature.py  retry_feature.py  streaming_feature.py  test_feature.py
py/test/: runner.py  test_accommodation_direct.py  test_accommodation_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: clean.py  done.py  feature_hook.py  fetcher.py  make_error.py  make_request.py  make_response.py  make_result.py  make_spec.py  make_url.py  prepare_auth.py  prepare_headers.py  prepare_method.py  result_basic.py  result_body.py  result_headers.py
rb/: AGENTS.md  Accommodation_sdk.gemspec  (+7 more)
(+411 files in other folders)
